2007-12-17  Mathias Hasselmann  <mathias@openismus.com>

	* configure.in:
	  Use AM_PATH_PYTHON instread of AC_PATH_PROG to find Python.
	  (#503710)

2007-12-17  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.xsl:
	  Render accronyms from docbook and glossary in html.

2007-12-17  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/tester-docs.sgml:
	* tests/bugs/docs/tester-docs.xml:
	* tests/gobject/docs/tester-docs.sgml:
	* tests/gobject/docs/tester-docs.xml:
	  Add the xml instead of the sgml docs.

2007-12-12  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Revert last change and reopen #503119. Needs a different fix.

2007-12-12  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Use content_files as a dependency the sgml-build.stamp.

2007-12-11  Mathias Hasselmann  <mathias@openismus.com>

	* gtkdoc-depscan.in:
	  Use colon as name-version-separator in book names.

2007-12-11  Mathias Hasselmann  <mathias@openismus.com>

	* gtkdoc-depscan.in:
	  Also scan devhelp folders.

2007-12-11  Mathias Hasselmann  <mathias@openismus.com>

	* gtkdoc-depscan.in: 
	  Print reasonable error message when passing
	  non-existant files on command line.

2007-12-11  Stefan Kost  <ensonic@users.sf.net>

	patch by: Kouhei Sutou <kou@cozmixng.org>

	* gtk-doc.xsl:
	  Consitently use UTF-8 instead of US-ASCII for output encoding.
	  Fixes #497367

2007-12-10  Mathias Hasselmann  <mathias@openismus.com>

	* configure.in:
	* gtkdoc-depscan.in:
	* Makefile.am:
	  Add gtkdoc-depscan, which resolves source code dependencies
	  by scanning devhelp2 books.

2007-12-10  Stefan Kost  <ensonic@users.sf.net>

	* devhelp2.xsd:
	  Update schema.
	  
	* gtk-doc.notmpl.make:
	  Remove left-over 'fi'.

2007-12-05  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Better fix for #501066.

2007-12-05  Stefan Kost  <ensonic@users.sf.net>

	* devhelp2.xsd:
	  Add first version of the schema.
	  